--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cloud">Cloud</string>
     <string name="ultraViolit">Ultra Violit</string>
     <string name="visibility">Visibility</string>
+    <string name="welcome">Welcome back</string>
 </resources>
