--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="ultraViolit">Ultra Violit</string>
     <string name="visibility">Visibility</string>
     <string name="welcome">Welcome back</string>
+    <string name="outfit">outfit of the day</string>
 </resources>
